@@ -7,6 +7,7 @@ Build 3.3.0.GA
 		* [NH-2950] - IAccessCallback.NextValue property renamed and changed to a method called IAccessCallback.GetNextValue()
 		* [NH-2953] - SequenceStyleGenerator now forces use of a table if a pooled optimizer is chosen and the dialect doesn't support pooled sequences.
 		* [NH-2960] - Queries for an entity name will now not include instances of the same class mapped using a different entity name.
+		* [NH-2664] - IHqlExpressionVisitor has new property ISessionFactory SessionFactory { get; }
 
 Build 3.2.0.GA (rev6000)
 =============================
